# DiscordRPC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/: get-info.py
.github/workflows/: build.yml  draft.yml
include/: CustomPresense.hpp
src/: CustomPresence.cpp  CustomPresense.cpp  ExternalModSettings.cpp.dont  ExternalModSettingsValue.hpp.dont  main.cpp
